--- a/css/style.css
+++ b/css/style.css
@@ -348,12 +348,32 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("images/banner.jpg") center #000;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   z-index: -1;
+  animate: bgActive 3s infinite;
 }
+
+@keyframes bgActive
+{
+  0%{
+    left: 0%;
+  }
+  25%{
+    left: 25%;
+  }
+  50%{
+    left: 50%;
+  }
+  75%{
+    left: 75%;
+  }
+  100%{
+    left: 100%;
+  }
+}
+
 #header-title {
   text-align: center;
   height: 40px;
@@ -1372,3 +1392,5 @@ pre .javascript .function {
   margin-right: 5px;
   display: inline-block;
 }
+
+
