--- a/css/style.css
+++ b/css/style.css
@@ -352,13 +352,13 @@ body {
   -moz-background-size: cover;
   background-size: cover;
   z-index: -1;
-  animation: bgActive 3s infinite;
+/*   animation: bgActive 3s infinite;
   -moz-animation: bgActive 3s infinite;
   -webkit-animation: bgActive 3s infinite;
-  -o-animation: bgActive 3s infinite;
+  -o-animation: bgActive 3s infinite; */
 }
 
-@keyframes bgActive
+/* @keyframes bgActive
 {
   0%{
     left: 0%;
@@ -375,7 +375,7 @@ body {
   100%{
     left: 100%;
   }
-}
+} */
 
 #header-title {
   text-align: center;
