--- a/css/moneys.css
+++ b/css/moneys.css
@@ -7,9 +7,14 @@
 body {
 	margin: 0px;
 	padding: 0px;
-	background: url(../images/项目页面-02.jpg) center no-repeat;
-	background-size: 100% auto;
 	color: #ffffff;
+}
+.bgsection{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background: url(../images/项目页面-02.jpg) center no-repeat;
+	background-size: 100% 100%;
 }
 .centerContext {
  	width: 1100px;
