--- a/css/css.css
+++ b/css/css.css
@@ -16,7 +16,7 @@ html header input {
   position: absolute;
   left: 1rem;
   top: 1rem;
-  background: url(img/return.png) no-repeat center;
+  background: url(images/return.png) no-repeat center;
 }
 html header span {
   display: inline-block;
